dom/quota/QuotaCommon.h
@@ -1220,6 +1220,19 @@ auto ReduceEachFileAtomicCancelable(nsIFile& aDirectory,
       std::move(aInit), aBody);
 }
 
+constexpr bool IsDatabaseCorruptionError(const nsresult aRv) {
+  return aRv == NS_ERROR_FILE_CORRUPTED || aRv == NS_ERROR_STORAGE_IOERR;
+}
+
+template <auto SuccessValue, typename V = decltype(SuccessValue)>
+auto FilterDatabaseCorruptionError(const nsresult aValue)
+    -> Result<V, nsresult> {
+  if (IsDatabaseCorruptionError(aValue)) {
+    return V{SuccessValue};
+  }
+  return Err(aValue);
+}
+
 }  // namespace quota
 }  // namespace dom
 }  // namespace mozilla
